edit flask routes and template

--- a/web_app/templates/upload_image.html
+++ b/web_app/templates/upload_image.html
@@ -1,4 +1,4 @@
-<!-- display all images from database -->
+<!-- where user can take a picture and machine learning client will output emoji -->
 {% extends 'layout.html' %}
 
 {% block body %}
