add upload image option

--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -8,6 +8,10 @@
     />
   </head>
   <body>
+  <header>
+      <h1>EMOJI MATCHER</h1>
+  </header>
+    {% block body %} {% endblock %}
 
   </body>
 </html>
