working image to db and display

--- a/web_app/templates/display.html
+++ b/web_app/templates/display.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-    {% for image in images %}
+    {% for image in images|reverse %}
         <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
             <img src="data:image/jpeg;base64,{{ image.image_data }}" class="card-img-top" alt="{{ image.filename }}">
