make temp image file to process

--- a/web_app/templates/upload_image.html
+++ b/web_app/templates/upload_image.html
@@ -65,7 +65,7 @@
             dataurl_container.style.display = 'block';
 
             // Submit the form to upload the image
-            document.getElementById('imageData').value = image_data_url.split(',')[1];
+            document.getElementById('imageData').value = image_data_url;
         });
 
     </script>
